traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: type mismatch;
 found   : Unit
 required: Boolean
def fonctionTest():Boolean = {
                             ^